[project]
name = "ebay-listing-grabber"
version = "0.1.0"
description = "Download images and videos from eBay listings"
requires-python = ">= 3.12"
license = "MIT"
dependencies = [
    "requests",
    "beautifulsoup4",
    "curl_cffi",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "N"]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[dependency-groups]
dev = [
    "ruff>=0.15.0",
]
